# diesel-demo

./: .gitignore  Cargo.toml  LICENSE  README.md  database.db  diesel.toml  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/: index.md
docs/.vitepress/: config.mts
docs/advanced-features/: connection-database.md  custom-types.md  relations.md  transaction.md
docs/basic-usage/: connection-database.md  create.md  delete.md  models.md  native_sql.md  read.md  update.md
docs/extensions/: configuring-diesel-cli.md  extending-diesel.md  schema_in_depth.md
docs/intro/: getting-started.md  what-is-diesel.md
examples/ch01_blog_demo_cli/: Cargo.toml  diesel.toml
examples/ch02_r2d2/: Cargo.toml  diesel.toml
examples/ch03_usage_read/: Cargo.toml  diesel.toml
examples/ch04_usage_insert/: Cargo.toml
examples/ch05_usage_update/: Cargo.toml  diesel.toml
examples/ch06_usage_delete/: Cargo.toml  diesel.toml
examples/ch07_features_transaction/: Cargo.toml  diesel.toml
examples/ch08_features_custom_types/: Cargo.toml  diesel.toml
examples/ch09_features_relations/: Cargo.toml  diesel.toml
migrations/2025-05-06-062724_create_users/: up.sql
migrations/2025-05-07-062617_create_users/: up.sql
migrations/2025-05-07-120707_create_users/: up.sql
migrations/2025-05-09-083521_create_books/: up.sql
migrations/2025-05-09-083524_create_pages/: up.sql
migrations/2025-05-13-140733_create_authors/: down.sql
src/: handlers.rs  lib.rs  main.rs  models.rs  schema.rs
src/apis/: book.rs  (+2 more)
tests/: helpers_test.rs  test_helpers.rs  user_api_test.rs
(+26 files in other folders)
