[package]
name = "rust_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.9.0" }
diesel = { version = "2.2", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
env_logger = "0.11"
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.10"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"
diesel_migrations = { version = "2.2", features = ["sqlite"] }
